--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:mbn_circleColor="#ffffff"
-        app:mbn_backgroundBottomColor="#ffffff"
-        app:mbn_countBackgroundColor="#ff6f00"
-        app:mbn_countTextColor="#ffffff"
-        app:mbn_defaultIconColor="#90a4ae"
+        app:mbn_circleColor="#FFCC00"
+        app:mbn_backgroundBottomColor="#0A0A1B"
+        app:mbn_countBackgroundColor="#D4AF37"
+        app:mbn_countTextColor="#FFFFFF"
+        app:mbn_defaultIconColor="#FFFFFF"
         app:mbn_rippleColor="#2f424242"
-        app:mbn_selectedIconColor="#3c415e"
+        app:mbn_selectedIconColor="@color/white"
         app:mbn_shadowColor="#1f212121"
-        />
+    />
+
+
 
 </RelativeLayout>
