--- a/app/src/main/res/layout/fragment_mensaje.xml
+++ b/app/src/main/res/layout/fragment_mensaje.xml
@@ -35,7 +35,7 @@
             android:layout_height="48dp"
             android:padding="4dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground" />
+            android:src="@drawable/ahri" />
 
         <!-- Nombre de usuario -->
         <TextView
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:text="Nombre de Usuario"
+            android:text="Manolito Pies De Plata"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/avatarImageView"
