--- a/app/src/main/res/layout/fragment_social.xml
+++ b/app/src/main/res/layout/fragment_social.xml
@@ -13,7 +13,7 @@
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         app:title="Chat"
-        app:titleTextColor="@android:color/white"
+        app:titleTextColor="#D4AF37"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
@@ -66,14 +66,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
+                    android:id="@+id/cosas"
                     android:background="@color/black">
 
                     <ImageView
                         android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/ahri"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -141,10 +142,10 @@
 
                     <ImageView
                         android:id="@+id/imageView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/gwen"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -194,10 +195,10 @@
 
                     <ImageView
                         android:id="@+id/imageView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/seraphine"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -256,10 +257,10 @@
 
                     <ImageView
                         android:id="@+id/imageView6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/soraka"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -329,10 +330,10 @@
 
                     <ImageView
                         android:id="@+id/imageView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/ahri"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -391,10 +392,10 @@
 
                     <ImageView
                         android:id="@+id/imageView8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/gwen"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -444,10 +445,10 @@
 
                     <ImageView
                         android:id="@+id/imageView9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/seraphine"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -506,10 +507,10 @@
 
                     <ImageView
                         android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/soraka"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -577,10 +578,10 @@
 
                     <ImageView
                         android:id="@+id/imageView10"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="72dp"
+                        android:layout_height="72dp"
                         android:layout_gravity="start"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/ahri"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -589,7 +590,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top"
-                        android:text="Manolito Pies de Plata"
+                        android:text="Valenciano"
                         android:textColor="@color/white"
                         android:layout_marginLeft="10dp"
                         android:textSize="22dp"
@@ -602,7 +603,7 @@
                         android:layout_gravity="bottom"
                         android:layout_marginLeft="80dp"
                         android:layout_marginTop="19dp"
-                        android:text="Hola que tal? Ya has aprendido a cap..."
+                        android:text="El Valenciano no es un idioma"
                         android:textColor="@color/white"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
